to scan the extension while installing and redesigned popup

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,9 @@
   "permissions": [
     "declarativeNetRequest",
     "contextMenus",
-    "storage"
+    "storage",
+    "management",
+    "notifications"
   ],
   "host_permissions": [
     "<all_urls>"
