--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "Local backend for PhishingShield extension reporting",
     "main": "server.js",
+    "engines": {
+        "node": "18.x"
+    },
     "scripts": {
         "start": "node server.js"
     },
