--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,11 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "@sendgrid/mail": "^8.1.6",
+        "resend": "^3.2.0",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "jsonwebtoken": "^9.0.2",
-        "nodemailer": "^7.0.12"
+        "jsonwebtoken": "^9.0.2"
     }
 }
