--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "resend": "^3.2.0",
+        "@sendgrid/mail": "^8.1.6",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
