--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "@google/generative-ai": "^0.24.1",
         "axios": "^1.6.0",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
