--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
         "dotenv": "^17.2.3",
         "express": "^4.18.2",
         "groq-sdk": "^0.37.0",
-        "jsonwebtoken": "^9.0.2"
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.3.0",
+        "mongoose": "^8.0.3"
     }
 }
