feat: Add extended Chameleon signatures (50 brands) and update risk engine

--- a/manifest.json
+++ b/manifest.json
@@ -43,6 +43,7 @@
         "js/ai_model.js",
         "js/threat_intel.js",
         "js/risk_engine.js",
+        "js/chameleon.js",
         "js/content.js"
       ],
       "css": [
