PhishingShield 2.0 Update: AI Integrations, Enhanced HUD, and Detailed Documentation

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
     "management",
     "notifications",
     "scripting",
-    "alarms"
+    "alarms",
+    "downloads"
   ],
   "host_permissions": [
     "<all_urls>"
